mise à jour et ajout de fichiers

--- a/tp2/s4_sentiment.ipynb
+++ b/tp2/s4_sentiment.ipynb
@@ -67,12 +67,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "get_sentiment(\"Ce journal est vraiment super intéressant.\")"
+    "get_sentiment(\" A REMET. Salon colff. de dame en pleine activité pour cause de santé \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sentiment(\"machine à coudre canette centrale, parfait état\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sentiment(\"COUTURE On demande première ouvrière, sachant dlrig. petit atelier. — Ecrire\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sentiment(\" BONNE ACTION AUTANT ÉLÉMENTAIRE \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sentiment(\"PERDU chien taille moyenne poils noirs longs, assez vieux, nom Cas; y. Rapporter contre récompense \")"
    ]
   },
   {
@@ -83,22 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "get_sentiment(\"Cette phrase est négative et je ne suis pas content !\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Utilisation de transformers\n",
-    "\n",
-    "Documentation: https://github.com/TheophileBlard/french-sentiment-analysis-with-bert\n",
-    "\n",
-    "**!!** Si le code ne tourne pas sur votre machine, vous pouvez le tester directement sur Google Colab en utilisant [ce lien](https://colab.research.google.com/github/TheophileBlard/french-sentiment-analysis-with-bert/blob/master/colab/french_sentiment_analysis_with_bert.ipynb) **!!**\n",
-    "\n",
-    "Le modèle peut également être testé en ligne sur [HuggingFace](https://huggingface.co/tblard/tf-allocine)\n",
-    "\n",
-    "### Installation des librairies et imports"
+    "get_sentiment(\"les écuries et rue Royale gant noir fourré.\")"
    ]
   },
   {
@@ -107,19 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install tensorflow\n",
-    "!pip install sentencepiece\n",
-    "!pip install transformers\n",
-    "\n",
-    "from transformers import AutoTokenizer, TFAutoModelForSequenceClassification\n",
-    "from transformers import pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Chargement du modèle"
+    "get_sentiment(\"POSE FILET BAGAGE COMPARTIMENT CHEMIN FER PETIT PANIER SOIGNEUSEMENT FICELÉ IMMÉDIATEMENT\")"
    ]
   },
   {
@@ -128,26 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"tblard/tf-allocine\", use_pt=True)\n",
-    "model = TFAutoModelForSequenceClassification.from_pretrained(\"tblard/tf-allocine\")\n",
-    "\n",
-    "sentiment_analyser = pipeline('sentiment-analysis', model=model, tokenizer=tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Analyser le sentiment d'une phrase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiment_analyser(\"Ce journal est vraiment super intéressant.\")"
+    "get_sentiment(\" ACHAT MONTRES CASSÉES\")"
    ]
   },
   {
@@ -156,7 +144,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_analyser(\"Cette phrase est négative et je ne suis pas content !\")"
+    "get_sentiment(\"JE CHERCHE 1 aspirateur et 1 cireuse Electro- lux.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "get_sentiment(\"DESIRE REPRENDRE commerce article de luxe ou louer rez-de-chaussée dans artère importante.\")"
    ]
   }
  ],
@@ -176,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
