--- a/module4/s1_classification.ipynb
+++ b/module4/s1_classification.ipynb
@@ -305,7 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = classifier.predict(X_test)"
+    "y_pred = classifier.predict(X_test)\n",
+    "# X_test est la valeur réelle"
    ]
   },
   {
@@ -321,7 +322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred[:20]"
+    "y_pred[:20]\n",
+    "# valeur predit"
    ]
   },
   {
@@ -399,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
