--- a/tp3/tp3.ipynb
+++ b/tp3/tp3.ipynb
@@ -16,21 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\PC\\Documents\\tac\\tp3\\tp3.ipynb Cell 3\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Documents/tac/tp3/tp3.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mstring\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Documents/tac/tp3/tp3.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PC/Documents/tac/tp3/tp3.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnltk\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Documents/tac/tp3/tp3.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Documents/tac/tp3/tp3.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m \u001b[39mimport\u001b[39;00m word_tokenize\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import collections\n",
     "import os\n",
@@ -483,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,9 +497,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing line 0/7936\n",
+      "processing line 100/7936\n",
+      "processing line 200/7936\n",
+      "processing line 300/7936\n",
+      "processing line 400/7936\n",
+      "processing line 500/7936\n",
+      "processing line 600/7936\n",
+      "processing line 700/7936\n",
+      "processing line 800/7936\n",
+      "processing line 900/7936\n",
+      "processing line 1000/7936\n",
+      "processing line 1100/7936\n",
+      "processing line 1200/7936\n",
+      "processing line 1300/7936\n",
+      "processing line 1400/7936\n",
+      "processing line 1500/7936\n",
+      "processing line 1600/7936\n",
+      "processing line 1700/7936\n",
+      "processing line 1800/7936\n",
+      "processing line 1900/7936\n",
+      "processing line 2000/7936\n",
+      "processing line 2100/7936\n",
+      "processing line 2200/7936\n",
+      "processing line 2300/7936\n",
+      "processing line 2400/7936\n",
+      "processing line 2500/7936\n",
+      "processing line 2600/7936\n",
+      "processing line 2700/7936\n",
+      "processing line 2800/7936\n",
+      "processing line 2900/7936\n",
+      "processing line 3000/7936\n",
+      "processing line 3100/7936\n",
+      "processing line 3200/7936\n",
+      "processing line 3300/7936\n",
+      "processing line 3400/7936\n",
+      "processing line 3500/7936\n",
+      "processing line 3600/7936\n",
+      "processing line 3700/7936\n",
+      "processing line 3800/7936\n",
+      "processing line 3900/7936\n",
+      "processing line 4000/7936\n",
+      "processing line 4100/7936\n",
+      "processing line 4200/7936\n",
+      "processing line 4300/7936\n",
+      "processing line 4400/7936\n",
+      "processing line 4500/7936\n",
+      "processing line 4600/7936\n",
+      "processing line 4700/7936\n",
+      "processing line 4800/7936\n",
+      "processing line 4900/7936\n",
+      "processing line 5000/7936\n",
+      "processing line 5100/7936\n",
+      "processing line 5200/7936\n",
+      "processing line 5300/7936\n",
+      "processing line 5400/7936\n",
+      "processing line 5500/7936\n",
+      "processing line 5600/7936\n",
+      "processing line 5700/7936\n",
+      "processing line 5800/7936\n",
+      "processing line 5900/7936\n",
+      "processing line 6000/7936\n",
+      "processing line 6100/7936\n",
+      "processing line 6200/7936\n",
+      "processing line 6300/7936\n",
+      "processing line 6400/7936\n",
+      "processing line 6500/7936\n",
+      "processing line 6600/7936\n",
+      "processing line 6700/7936\n",
+      "processing line 6800/7936\n",
+      "processing line 6900/7936\n",
+      "processing line 7000/7936\n",
+      "processing line 7100/7936\n",
+      "processing line 7200/7936\n",
+      "processing line 7300/7936\n",
+      "processing line 7400/7936\n",
+      "processing line 7500/7936\n",
+      "processing line 7600/7936\n",
+      "processing line 7700/7936\n",
+      "processing line 7800/7936\n",
+      "processing line 7900/7936\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "with open(outfile, 'w', encoding=\"utf-8\") as output:\n",
     "    with open(infile, encoding=\"utf-8\", errors=\"backslashreplace\") as f:\n",
@@ -538,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
