--- a/tp4/Tp4.ipynb
+++ b/tp4/Tp4.ipynb
@@ -1664,7 +1664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chercher les mots les plus proches d'un terme donné"
+    "## Chercher les mots les plus proches d'un terme donné"
    ]
   },
   {
